Write to shape and geopackage

--- a/notebook/play with GeoPandas.ipynb
+++ b/notebook/play with GeoPandas.ipynb
@@ -33,9 +33,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ECJk8P0AMpWD",
-        "outputId": "3f50faa9-7e0f-4d7b-b1f9-ffe598a86193"
+        "outputId": "5e3725d8-3688-4ba7-c74f-99e1da40add9"
       },
-      "execution_count": 5,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -74,7 +74,7 @@
       "metadata": {
         "id": "cpMzr9x9M0JU"
       },
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -98,7 +98,7 @@
       "metadata": {
         "id": "41ZDMxFwONRy"
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -110,7 +110,7 @@
       "metadata": {
         "id": "yNtPhM-QPz9N"
       },
-      "execution_count": 13,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -124,7 +124,7 @@
       "metadata": {
         "id": "gz6uJPzsP6mU"
       },
-      "execution_count": 14,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -139,9 +139,9 @@
           "height": 175
         },
         "id": "bWn9F9XMQ0-R",
-        "outputId": "5d9c9fb9-bd90-4f4c-a2c4-582c409e7673"
+        "outputId": "d7c31086-51cc-4ee1-dc9e-fd49a808de0f"
       },
-      "execution_count": 16,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -155,7 +155,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-39487456-b3dd-41ad-9e48-70ae65ba8e21\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e941e911-4177-4bd4-abcc-fdeb21b62e80\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -215,7 +215,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-39487456-b3dd-41ad-9e48-70ae65ba8e21')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e941e911-4177-4bd4-abcc-fdeb21b62e80')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -267,12 +267,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-39487456-b3dd-41ad-9e48-70ae65ba8e21 button.colab-df-convert');\n",
+              "        document.querySelector('#df-e941e911-4177-4bd4-abcc-fdeb21b62e80 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-39487456-b3dd-41ad-9e48-70ae65ba8e21');\n",
+              "        const element = document.querySelector('#df-e941e911-4177-4bd4-abcc-fdeb21b62e80');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -292,7 +292,7 @@
               "  </div>\n",
               "\n",
               "\n",
-              "  <div id=\"id_94317b78-0268-4cc3-ad7c-5a0ee37f81be\">\n",
+              "  <div id=\"id_00615a70-52f2-46b4-8d63-74eb028c5c49\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -336,7 +336,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_94317b78-0268-4cc3-ad7c-5a0ee37f81be button.colab-df-generate');\n",
+              "        document.querySelector('#id_00615a70-52f2-46b4-8d63-74eb028c5c49 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -357,7 +357,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 6
         }
       ]
     },
@@ -380,7 +380,7 @@
       "metadata": {
         "id": "aC4UNt8HT4T4"
       },
-      "execution_count": 19,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -395,9 +395,9 @@
           "height": 236
         },
         "id": "oVxWnSMLVPtV",
-        "outputId": "41208110-bdea-4f06-f366-73138b2b9837"
+        "outputId": "74757ab3-52d1-4870-8a12-56508da0f82f"
       },
-      "execution_count": 20,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -449,7 +449,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e79b8b06-a277-45d7-a736-39f870debbca\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-4b746278-e902-466c-bfe5-956d88caa871\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -619,7 +619,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e79b8b06-a277-45d7-a736-39f870debbca')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4b746278-e902-466c-bfe5-956d88caa871')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -671,12 +671,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-e79b8b06-a277-45d7-a736-39f870debbca button.colab-df-convert');\n",
+              "        document.querySelector('#df-4b746278-e902-466c-bfe5-956d88caa871 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-e79b8b06-a277-45d7-a736-39f870debbca');\n",
+              "        const element = document.querySelector('#df-4b746278-e902-466c-bfe5-956d88caa871');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -705,7 +705,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 8
         }
       ]
     },
@@ -722,9 +722,9 @@
           "height": 863
         },
         "id": "uHPDmiGhWibc",
-        "outputId": "17d75a6b-7173-465b-92c3-e46a595b7310"
+        "outputId": "97a6f352-a518-4e9a-d263-53a43298fc63"
       },
-      "execution_count": 25,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -896,7 +896,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-68c3e35c-545d-4426-924a-663452d741ec\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-55e020c4-5f6f-421c-b2dd-b88a9c65515c\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1546,7 +1546,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-68c3e35c-545d-4426-924a-663452d741ec')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-55e020c4-5f6f-421c-b2dd-b88a9c65515c')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1598,12 +1598,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-68c3e35c-545d-4426-924a-663452d741ec button.colab-df-convert');\n",
+              "        document.querySelector('#df-55e020c4-5f6f-421c-b2dd-b88a9c65515c button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-68c3e35c-545d-4426-924a-663452d741ec');\n",
+              "        const element = document.querySelector('#df-55e020c4-5f6f-421c-b2dd-b88a9c65515c');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1623,7 +1623,7 @@
               "  </div>\n",
               "\n",
               "\n",
-              "  <div id=\"id_f7855bf0-5376-4b30-aa9f-f42668862f9d\">\n",
+              "  <div id=\"id_53d90d7e-d52e-43f8-a19d-2dc9105477a4\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -1667,7 +1667,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_f7855bf0-5376-4b30-aa9f-f42668862f9d button.colab-df-generate');\n",
+              "        document.querySelector('#id_53d90d7e-d52e-43f8-a19d-2dc9105477a4 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -1687,22 +1687,57 @@
             }
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 9
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "import os\n",
+        "\n",
         "#Write output file\n",
         "belted_death_file = 'belted_death_file.geojson'\n",
+        "\n",
+        "# Check if the file exists and remove it to ensure a clean write\n",
+        "if os.path.exists(belted_death_file):\n",
+        "    os.remove(belted_death_file)\n",
+        "\n",
         "belted_death.to_file(filename=belted_death_file,\n",
         "                     driver='GeoJson')"
       ],
       "metadata": {
         "id": "934B3bpZX8b2"
       },
-      "execution_count": 24,
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Write shapefile\n",
+        "output_file = 'belted_death_file.shp'\n",
+        "belted_death.to_file(filename=belted_death_file)"
+      ],
+      "metadata": {
+        "id": "vKGla49oJD20"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Write GeoPackage\n",
+        "output_file = 'belted_death_file.gpkg'\n",
+        "belted_death.to_file(filename=belted_death_file,\n",
+        "                     driver='GPKG')"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "W2Djp2ZRJw4W"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1725,9 +1760,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "L9bjUuVKZN7A",
-        "outputId": "7b9527a1-0aaf-4c62-e0ec-7e526eb2a41d"
+        "outputId": "3b8a863e-e28d-4f60-e42e-fc5fe797289b"
       },
-      "execution_count": 28,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1747,7 +1782,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 14
         }
       ]
     },
@@ -1764,9 +1799,9 @@
           "height": 236
         },
         "id": "TjG93tVfZ8d0",
-        "outputId": "e65e3390-542a-437d-d5a9-e26e9d4f7137"
+        "outputId": "348ac855-a54e-48cb-a5d6-c65c7efb6142"
       },
-      "execution_count": 29,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1818,7 +1853,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c34811ef-7ee7-48a4-90af-d05af72b9947\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-79183774-546b-4934-af4e-42549bab5bda\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1988,7 +2023,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c34811ef-7ee7-48a4-90af-d05af72b9947')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-79183774-546b-4934-af4e-42549bab5bda')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2040,12 +2075,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-c34811ef-7ee7-48a4-90af-d05af72b9947 button.colab-df-convert');\n",
+              "        document.querySelector('#df-79183774-546b-4934-af4e-42549bab5bda button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-c34811ef-7ee7-48a4-90af-d05af72b9947');\n",
+              "        const element = document.querySelector('#df-79183774-546b-4934-af4e-42549bab5bda');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -2074,7 +2109,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 15
         }
       ]
     }
